--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,8 @@
       <h2>This is the homepage</h2>
 
       <p>
-        Find me in <code>app/views/pages/home.html.erb</code>
+        <%= link_to 'Liste des articles', articles_path %>
+        <%= link_to 'Créer un article', new_article_path %>
       </p>
 
       <p>
