--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,32 +6,32 @@
       <div class="col-md-12 navbar text-center">
         <ul class="navbar_ul">
           <li class="navbar_link">
-            <%= link_to articles_path do %>
+            <%= link_to 'http://localhost:3000/politique' do %>
               Politique
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to articles_path do %>
+            <%= link_to 'http://localhost:3000/economie' do %>
               Economie
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to articles_path do %>
+            <%= link_to 'http://localhost:3000/international' do %>
               International
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to articles_path do %>
+            <%= link_to 'http://localhost:3000/droit' do %>
               Droit
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to articles_path do %>
+            <%= link_to 'http://localhost:3000/culture' do %>
               Culture
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to articles_path do %>
+            <%= link_to 'http://localhost:3000/le-havre' do %>
               Le Havre
             <% end %>
           </li>
