--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,7 +4,9 @@
 
   <%= f.input :title %>
   <%= f.hidden_field :user_id, :value => current_user.id%>
+  <%= f.label :content %>
   <%= f.text_area :content%>
+  <%= f.input :themes%>
   <%= f.label :picture %>
   <%= f.file_field :picture %>
 
