--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -7,3 +7,9 @@
  * [TIPS] Look for cool form design on CodePen
  * ex: http://codepen.io/search?q=sign+up
  * ------------------------------------- */
+
+ .form_rounded_style {
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+}
