--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -54,7 +54,7 @@ $navbar-profile-border-width: 2px;
   .navbar {
     heigt: $navbar-height;
     width : 100%;
-    border-bottom: 1px solid black;
+
     .navbar_link {
       display: inline;
       margin-left: 15px;
@@ -62,6 +62,7 @@ $navbar-profile-border-width: 2px;
       font-family: Cooperhewitt-book, sans-serif;
       text-transform: uppercase;
       font-size: 18px;
+      letter-spacing: 2px;
     }
   }
 }
