--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,32 +11,32 @@
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to 'http://localhost:3000/politique' do %>
+            <%= link_to 'http://journal-yann-production.herokuapp.com/politique' do %>
               <i class="fa fa-university"></i> Politique
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to 'http://localhost:3000/economie' do %>
+            <%= link_to 'http://journal-yann-production.herokuapp.com/economie' do %>
               <i class="fa fa-eur"></i> Economie
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to 'http://localhost:3000/international' do %>
+            <%= link_to 'http://journal-yann-production.herokuapp.com/international' do %>
               <i class="fa fa-globe"></i> International
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to 'http://localhost:3000/droit' do %>
+            <%= link_to 'http://journal-yann-production.herokuapp.com/droit' do %>
               <i class="fa fa-gavel"></i> Droit
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to 'http://localhost:3000/culture' do %>
+            <%= link_to 'http://journal-yann-production.herokuapp.com/culture' do %>
               <i class="fa fa-book"></i> Culture
             <% end %>
           </li>
           <li class="navbar_link">
-            <%= link_to 'http://localhost:3000/le-havre' do %>
+            <%= link_to 'http://journal-yann-production.herokuapp.com/le-havre' do %>
               <i class="fa fa-building-o"></i> Le Havre
             <% end %>
           </li>
