--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,52 @@
-<%= @articles.count %>
+<div class="col-xs-9">
+  <% @articles.each do |article| %>
+    <% unless article.themes.blank? %>
+      <% if article.themes.downcase == params[:themes] %>
+        <div class="marley-animated col-xs-6 " data-sr="move, opacity 0.4, over 1.8s">
+          <div class="grid ">
+            <div class="">
+              &nbsp;
+              <figure class="effect-marley ">
+                <%= image_tag article.picture %>
+                <figcaption>
+                  <h3> <%= article.title %> </h3>
+                  <p><%= markdown_to_html(article.content.split(" ").first(35).join(" ") + "...") %></p>
+                  <%= link_to 'LIRE', article_path(article) %>
 
-<% @articles.each do |article| %>
-  <% if article.themes.downcase == params[:themes] %>
-    <p>
-      <%= article.title %>
+                </figcaption>
+              </figure>
+            </div>
 
-      <%= link_to 'Lire', article_path(article) %>
-      <%= link_to "Editer l'article", edit_article_path(article) %>
-    </p>
+          </div>
+
+        </div>
+      <% end %>
+    <% end %>
   <% end %>
-<% end %>
+  <div class="col-xs-12">
+    <%= link_to 'Créer un article', new_article_path %>
+  </div>
+</div>
 
-<%= link_to 'Créer un article', new_article_path %>
+<div class="col-xs-3">
+<br><br>
+  <div class="side-bar">
+    <div class='background-side'></div>
+    <br>
+    <div class="text-left">
+      <%= search_form_for @q do |f| %>
+
+        <p>
+        <%= f.search_field :title_cont, class:'form-control', placeholder: '   Rechercher un article' %>
+      </p>
+        <br>
+      <% end %>
+
+    </div>
+    <p>
+      Les niches fiscales ont beau être rabotées d’année en année, il s’en crée toujours de nouvelles. La loi du 17 avril 2015 institue une réduction d’impôt pour investissement au capital d’entreprises de presse. Elle est précisée par un décret paru le 24 juillet au Journal Officiel. Explications.
+      En savoir plus sur http://www.lesechos.fr/?orH8mmTt5FFPLVix.99
+    </p>
+  </div>
+</div>
 
