--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,11 @@
   <div><%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', :default => 'we need your current password to confirm your changes') %>)</i><br />
   <%= f.password_field :current_password %></div>
 
+  <div>
+    <%= f.label :picture %>
+    <%= f.file_field :picture %>
+  </div>
+
   <div><%= f.submit t('.update', :default => "Update") %></div>
 <% end %>
 
