--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,8 @@
 
         <%= f.input :email, required: true, autofocus: true %>
         <%= f.input :password, required: true %>
+        <%= f.label :picture %>
+        <%= f.file_field :picture %>
         <%= f.button :submit, t('.sign_up', default: "Sign up"), class: "btn btn-primary" %>
       <% end %>
 
