--- a/app/assets/stylesheets/pages/_articles-index.scss
+++ b/app/assets/stylesheets/pages/_articles-index.scss
@@ -19,7 +19,7 @@
     letter-spacing: 1px;
   }
   .background-side {
-    background-image: url('blur.jpg');
+    background-image: url('../../images/blur.jpg');
     background-size: cover;
     background-position: center;
     height: 40px;
