--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -102,7 +102,7 @@ nav a:focus {
     position: relative;
     height: 80px !important;
     width : 100%;
-    background-image: url("blur.jpg");
+    background-image: url("blur.png");
     background-size: cover;
     background-position: center;
 
