--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -105,6 +105,7 @@ nav a:focus {
     background-image: url("blur.png");
     background-size: cover;
     background-position: center;
+    margin-bottom: 0px;
 
      ul {
       width: 100%;
