--- a/app/assets/stylesheets/pages/_articles-show.scss
+++ b/app/assets/stylesheets/pages/_articles-show.scss
@@ -19,4 +19,7 @@
     box-shadow: 10px 10px 8px 0px #656565;
     filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=8);
   }
+  .footer {
+    display: none;
+  }
 }
