--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,6 @@
 @import "home";
 @import "articles-show";
 @import "articles-index";
+@import "show-account";
+@import "my-articles";
+@import "articles-new";
