--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav class='cl-effect-21'>
   <div class="container-fluid navigation ">
     <div class="col-md-12 logo_space text-center" id='logo_id'>
-      <%= image_tag 'AYA-logo.png', :class => 'img-circle logo' %>
+      <%= link_to root_path do %>
+        <%= image_tag 'AYA-logo.png', :class => 'img-circle logo' %>
+      <% end %>
     </div>
 
 
