--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -16,7 +16,7 @@
     </div>
   <% end %>
   <div class="col-lg-12"><br><br></div>
-  <%= link_to edit_user_registration_path do %>
+  <%= link_to edit_account_path do %>
     <div class="col-lg-6 text-center">
       Editer mon profil <br>
       <i class="fa fa-user fa-2x "></i>
