--- a/app/assets/stylesheets/pages/_articles-index.scss
+++ b/app/assets/stylesheets/pages/_articles-index.scss
@@ -30,12 +30,13 @@
 
 
 .button_side {
-  box-shadow: 0px 0px 0px #888888 !important;
+  border: solid 0.5px grey;
   border-radius: 20px !important;
   -webkit-border-radius: 20px !important;
   -moz-border-radius: 20px !important;
   width: 80%;
-  height: 30px;
-  background-color: $green;
-  color: white;
+  height: 40px;
+  color: black;
+  font-size: 18px;
+
 }
